# solana-examples

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
clients/: Cargo.toml
clients/src/: transaction_structure.rs
programs/anchor-counter/: Cargo.toml
programs/anchor-counter/src/: lib.rs
programs/create-pda/: Cargo.toml
programs/create-pda/src/: lib.rs
programs/hello-world/src/: lib.rs
programs/king-of-the-hill/: Cargo.toml
programs/king-of-the-hill/src/: lib.rs
programs/movie-review/: Cargo.toml
programs/movie-review/src/: lib.rs
programs/solana-practice/: Cargo.toml
programs/solana-practice/src/: lib.rs
scripts/: create_mint_account.ts  derive_all_bump_seeds.ts  derive_pda.rs  fund_account.ts  pda_derivation.ts  set_compute_budget.ts  show_keypair.ts  simple_transfer_instruction.ts  sysvar_clock.ts  transaction_structure.ts  transfer_sol.ts
tests/: anchor-counter.ts  king-of-the-hill.ts  solana-practice.ts
tests/anchor-counter/: anchor-counter.test.ts
tests/king-of-the-hill/: king-of-the-hill.test.ts
tests/movie-review/: movie-review.test.ts
